# RIAM

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  clear_db.py  pyproject.toml  verify_langsmith.py
backend/alembic/: env.py
backend/alembic/versions/: 96d7ad5f5a32_initial.py  a5b19e390259_add_provider_to_agents.py  c923fa4bd0ef_change_embedding_dim_to_768.py
backend/app/: main.py
backend/app/api/v1/: agents.py  analytics.py  api.py  conversations.py  knowledge.py
backend/app/core/: config.py  database.py  enums.py  security.py
backend/app/models/: base.py
backend/app/repositories/: agent_repo.py  base.py  conversation_repo.py  knowledge_repo.py  user_repo.py
backend/app/schemas/: base.py
backend/app/services/: chat_service.py  llm_factory.py  rag_service.py
backend/tests/: conftest.py  test_analytics.py  test_embeddings.py  test_multi_tenancy.py  test_pdf_upload.py
docs/: report.md
frontend/: .env.example  .gitignore  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/public/: test-widget.html  widget.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/analytics/: page.tsx
frontend/src/app/dashboard/inbox/: page.tsx
frontend/src/app/dashboard/knowledge/: page.tsx
frontend/src/app/embed/[agent_id]/: page.tsx
