[project]
name = "riam-backend"
version = "0.1.0"
description = "Production-ready FastAPI backend for Riam AI Support Agent Builder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.2.0",
    "pydantic[email]>=2.6.0",
    "python-multipart>=0.0.9",
    "langchain>=0.1.12",
    "langchain-openai>=0.1.0",
    "langgraph>=0.0.26",
    "langsmith>=0.1.0",
    "pgvector>=0.2.5",
    "tiktoken>=0.6.0",
    "pypdf>=4.0.0",
    "firecrawl-py>=0.0.10",
    "clerk-backend-api>=0.1.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "langchain-google-genai>=1.0.1",
    "google-generativeai>=0.4.1",
    "langchain-anthropic>=0.1.4",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.5",
    "aiosqlite>=0.20.0",
    "fpdf2>=2.8.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
